syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoservice.account.proto";

package account;

import "account/api/list_account.proto";
import "account/api/get_account.proto";

message AccountApi {
    // POST /account-api/list-account
    account.api.ListAccount listAccount = 1;
    // POST /account-api/get-account
    account.api.GetAccount getAccount = 2;
}
